syntax = "proto3";
package seatlect;

option go_package = "github.com/tphume/seatlect-services/internal/genproto/businesspb";

import "common.proto";

service BusinessService {
  rpc ListBusiness (ListBusinessRequest) returns (ListBusinessResponse);
  rpc ListBusinessById (ListBusinessByIdRequest) returns (ListBusinessByIdResponse);
}

// For List business endpoint - the parameters are optional
message ListBusinessRequest {
  int32 limit = 1;
  Sort sort = 2;
  string name = 3;
  string type = 4;
  Latlng location = 5;
}

message ListBusinessResponse {
  repeated Business businesses = 1;
}

// For List business by id endpoint
message ListBusinessByIdRequest {
  repeated string ids = 1;
}

message ListBusinessByIdResponse {
  repeated Business businesses = 1;
}

// Helper definitions
enum Sort {
  NAME_ASC = 0;
  NAME_DESC = 1;
  LOCATION_ASC = 2;
  LOCATION_DESC = 3;
}